cluster/apps/networking/external-services/adguard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app adguard
  namespace: default
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: opnsense.${SECRET_PRIVATE_DOMAIN}.
  ports:
    - name: http
      port: &port 3010
      protocol: TCP
      targetPort: *port
